correction du fichier pom et du  jenkinsfile